tests/error/unary_times.gw
// [contains] no suitable resolution for prefix operator
int i;
*i;
